<resources>
    <string name="Application_Name">VitaVerde</string>
    <string name="btn_Enter">Entrar</string>
    <string name="Input_Mail_Login_and_Register">Dirección de Correo Electronico</string>
    <string name="Input_Password_Login_and_Register">Contraseña</string>
    <string name="txt_Informative_Login_and_Register_2">o Continuar con</string>
    <string name="btn_Session_with_Google">Google</string>
    <string name="txt_Informative_Login_2">Inicia Sesión</string>
    <string name="txt_Informative_Login_and_Register_1">Llevamos lo mejor del huerto hasta tu puerta</string>
    <string name="txt_btn_Login_to_Register">¿Primera vez en VitaVerde? Crea tu cuenta.</string>
    <string name="Input_User_Register">Usuario</string>
    <string name="txt_Informative_Register_1">Crea una Cuenta</string>
    <string name="txt_btn_Register_to_Login">¿Ya tienes cuenta? Inicia sesión aquí.</string>
    <string name="btn_Create_Account">Crear Cuenta</string>
    <string name="txt_Informative_Splash_1">Frutas con corazón, verduras con sabor.</string>
    <string name="txt_Informative_Splash_2">Diseño by Vitaverde</string>
    <string name="txt_Informative_Welcome_1">Frutas con corazón, verduras con sabor... como en casa.</string>
    <string name="Fragment_Home">Pantalla Home</string>
    <string name="Fragment_Canasta">Pantalla Canasta</string>
    <string name="Fragment_Buscar">Pantalla Buscar</string>
    <string name="Fragment_Menu">Pantalla Menú</string>
    <string name="Fragment_Perfil">Pantalla Perfil</string>
    <string name="txt_BottomNavigationView_Home">Home</string>
    <string name="txt_BottomNavigationView_Canasta">Canasta</string>
    <string name="txt_BottomNavigationView_Buscar">Buscar</string>
    <string name="txt_BottomNavigationView_Menu">Menú</string>
    <string name="txt_BottomNavigationView_Pefil">Perfil</string>
</resources>