<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/obfuscated_background"
    tools:context=".activities.CreateUserActivity">

    <EditText
        android:id="@+id/input_mail_register"
        android:layout_width="374dp"
        android:layout_height="53dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/icon_mail"
        android:drawablePadding="7dp"
        android:ems="10"
        android:hint="@string/Input_Mail_Login_and_Register"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColorHint="@color/color_txt_inputs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551" />

    <EditText
        android:id="@+id/input_password_register"
        android:layout_width="374dp"
        android:layout_height="53dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/icon_lock"
        android:drawablePadding="7dp"
        android:ems="10"
        android:hint="@string/Input_Password_Login_and_Register"
        android:inputType="numberPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColorHint="@color/color_txt_inputs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.644" />

    <ImageView
        android:id="@+id/img_avocado_register"
        android:layout_width="109dp"
        android:layout_height="109dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073"
        app:srcCompat="@drawable/logo_avocado_1" />

    <TextView
        android:id="@+id/txt_title_register"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:fontFamily="@font/yeon_sung"
        android:gravity="center"
        android:text="@string/Application_Name"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_avocado_register"
        app:layout_constraintStart_toStartOf="@+id/img_avocado_register"
        app:layout_constraintTop_toBottomOf="@+id/img_avocado_register"
        app:layout_constraintVertical_bias="0.013" />

    <TextView
        android:id="@+id/txt_subtitle_2_register"
        android:layout_width="181dp"
        android:layout_height="20dp"
        android:layout_marginTop="216dp"
        android:fontFamily="@font/yeon_sung"
        android:gravity="center"
        android:letterSpacing="0.05"
        android:text="@string/txt_Informative_Register_1"
        android:textColor="@color/text_description"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txt_subtitle_1_register"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/txt_subtitle_1_register"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

    <TextView
        android:id="@+id/txt_subtitle_3_register"
        android:layout_width="122dp"
        android:layout_height="40dp"
        android:fontFamily="@font/yeon_sung"
        android:gravity="center"
        android:text="@string/txt_Informative_Login_and_Register_2"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732" />

    <Button
        android:id="@+id/btn_google_create_user"
        style="@style/Widget.LoginGoogle.SimpleButton"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:paddingStart="18dp"
        android:paddingEnd="-18dp"
        android:text="@string/btn_Session_with_Google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.835" />

    <Button
        android:id="@+id/btn_create_user_register"
        style="@style/Widget.VitaVerde.GradientButton"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:text="@string/btn_Create_Account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.874"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.835" />

    <TextView
        android:id="@+id/txt_subtitle_1_register"
        android:layout_width="325dp"
        android:layout_height="17dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/yeon_sung"
        android:gravity="center"
        android:letterSpacing="0.05"
        android:text="@string/txt_Informative_Login_and_Register_1"
        android:textColor="@color/text_description"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txt_title_register"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/txt_title_register"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_register"
        app:layout_constraintVertical_bias="0.004" />

    <TextView
        android:id="@+id/btn_register_to_login"
        android:layout_width="177dp"
        android:layout_height="40dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/yeon_sung"
        android:gravity="center"
        android:text="@string/txt_btn_Register_to_Login"
        android:textColor="@color/text_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_create_user_register"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/btn_google_create_user" />

    <EditText
        android:id="@+id/input_user_register"
        android:layout_width="374dp"
        android:layout_height="53dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/icon_person"
        android:drawablePadding="7dp"
        android:ems="10"
        android:hint="@string/Input_User_Register"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColorHint="@color/color_txt_inputs"
        app:layout_constraintBottom_toBottomOf="@+id/btn_register_to_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.493" />


</androidx.constraintlayout.widget.ConstraintLayout>