<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/background_general"
    tools:context=".activities.SplashActivity">

    <ImageView
        android:id="@+id/img_avocado_splash"
        android:layout_width="295dp"
        android:layout_height="295dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203"
        app:srcCompat="@drawable/logo_avocado_1" />

    <TextView
        android:id="@+id/txt_title_splash"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:fontFamily="@font/yeon_sung"
        android:gravity="center"
        android:text="@string/Application_Name"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_avocado_splash"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/img_avocado_splash"
        app:layout_constraintTop_toBottomOf="@+id/img_avocado_splash"
        app:layout_constraintVertical_bias="0.115" />

    <TextView
        android:id="@+id/txt_subtitle_1_splash"
        android:layout_width="283dp"
        android:layout_height="17dp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:letterSpacing="0.05"
        android:text="@string/txt_Informative_Splash_1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txt_title_splash"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/txt_title_splash"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_splash"
        app:layout_constraintVertical_bias="0.157" />

    <TextView
        android:id="@+id/txt_subtitle_3_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yeon_sung"
        android:text="@string/txt_Informative_Splash_2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_subtitle_1_splash"
        app:layout_constraintVertical_bias="0.795" />
</androidx.constraintlayout.widget.ConstraintLayout>